--- a/content/static/css/_archive.scss
+++ b/content/static/css/_archive.scss
@@ -3,44 +3,52 @@
     height: 90px;
     line-height: 90px;
     text-align: center;
+
     &-text {
       font-size: 36px;
       font-weight: 800;
-      color: $black;      
+      color: $black;
       text-transform: uppercase;
     }
   }
+
   .previous-editions {
     display: flex;
     margin: auto;
     align-content: center;
     width: 800px;
     background-color: $archive-bg-content;
+
     .events {
       display: flex;
       flex-flow: row nowrap;
       text-align: center;
       flex: 1 1 25%;
+
       .years {
         flex: 1 1 10%;
         font-weight: 800;
         font-size: 15px;
         background-color: $archive-bg-year;
+
         .year {
           padding: 0px 0 10px 0;
           height: 20px;
           padding: 20px;
           cursor: pointer;
         }
+
         .year.active {
           background-color: $archive-active;
         }
       }
+
       .months {
         flex: 1 1 10%;
         font-weight: bold;
         font-size: 15px;
-        background-color: $archive-bg-month;        
+        background-color: $archive-bg-month;
+
         .event {
           padding: 0px 0 10px 0;
           height: 20px;
@@ -48,39 +56,49 @@
           display: none;
           cursor: pointer;
         }
+
         .event.active {
           background-color: $archive-active;
         }
+
         .event.show {
           display: block;
         }
       }
-    }    
+    }
+
     .content {
       flex: 1 1 75%;
+
       .speakers {
         display: none;
         padding: 20px;
         background-color: $archive-bg-content;
+
         .edition {
           padding-top: 15px;
-          font-size:24px;
+          font-size: 24px;
           font-weight: bold;
           text-align: center;
+
           sup {
             font-size: 18px;
           }
         }
+
         .speaker-details {
           display: flex;
           border-top: 1px solid $black;
           padding: 10px 0;
+
           &:nth-child(2) {
             border-top: none;
           }
+
           &:last-child {
             padding-bottom: 25px;
           }
+
           .time {
             flex: 1 1 10%;
             align-self: flex-start;
@@ -88,29 +106,34 @@
             font-weight: 800;
             text-transform: uppercase;
           }
+
           .speaker-detail {
             flex: 1 1 85%;
+
             .img {
               border-radius: 32px;
               width: 32px;
               height: 32px;
               margin: 5px 5px 5px 0;
             }
+
             .title {
               color: $pink;
               font-size: 20px;
               font-weight: bold;
-              display: block;            
-            }          
+              display: block;
+            }
+
             .title-default {
               color: $black;
               font-size: 20px;
               font-weight: bold;
             }
+
             .subtitle {
               display: block;
-              color: $gray;                          
-              font-size: 15px;            
+              color: $gray;
+              font-size: 15px;
               font-style: italic;
               text-align: justify;
               padding: 0 0 10px 0;
@@ -118,10 +141,12 @@
               overflow: hidden;
               transition: height .5s;
             }
+
             .show {
-                max-height: 1000px;
-                transition: height .5s;
-              }
+              max-height: 1000px;
+              transition: height .5s;
+            }
+
             .name {
               color: $pink;
               font-size: 15px;
@@ -129,10 +154,16 @@
               display: flex;
               align-items: center;
               justify-content: flex-start;
+
+              .speaker-description {
+                font-size: 12px;
+                font-weight: normal;
+              }
             }
           }
         }
       }
+
       .speakers.active {
         display: block;
       }
