--- a/content/static/css/_intro.scss
+++ b/content/static/css/_intro.scss
@@ -1,122 +1,121 @@
 .intro {
-  position: relative;
-  display: flex;
-  flex-flow: column;
-  min-height: 500px;
-  text-align: center;
-  padding-top: 100px;
-  .banner {
-    flex: 1 1 60%;
-    background: $intro-background center center no-repeat;
-    background-size: 100%;    
+	position: relative;
+	display: flex;
+	flex-flow: column;
+	min-height: 500px;
+	text-align: center;
+	padding-top: 100px;
+	.banner {
+		flex: 1 1 60%;
+		background: $intro-background center center no-repeat;
+		background-size: 100%;
 
-    &-overlay {
-      margin: auto;
-      height: 360px;
-      width: 620px;
-      position: absolute;
-      top: 100px;
-      bottom: 0;
-      right: 0;
-      left: 0;
-    }
-    .mask {
-      left: 0;
-      right: 0;
-      top: 0;
-      bottom: 0;
-      position: absolute;
-      overflow: hidden;
-      .blur {
-        position: absolute;
-        background-color: rgba(255, 255, 255, .8);
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        filter: blur(2px);
-      }
-    }
-  }
+		&-overlay {
+			margin: auto;
+			height: 360px;
+			width: 620px;
+			position: absolute;
+			top: 100px;
+			bottom: 0;
+			right: 0;
+			left: 0;
+		}
+		.mask {
+			left: 0;
+			right: 0;
+			top: 0;
+			bottom: 0;
+			position: absolute;
+			overflow: hidden;
+			.blur {
+				position: absolute;
+				background-color: rgba(255, 255, 255, 0.8);
+				left: 0;
+				right: 0;
+				top: 0;
+				bottom: 0;
+				filter: blur(2px);
+			}
+		}
+	}
 
-  &-info {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
+	&-info {
+		position: absolute;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		top: 0;
 
-    &-place {
-      &-title {
-        font-size: 33px;
-        font-weight: 800;
-        margin: 0 70px;
-        padding-top: 20px;
-      }
-    }
+		&-place {
+			&-title {
+				font-size: 33px;
+				font-weight: 800;
+				margin: 0 70px;
+				padding-top: 20px;
+			}
+		}
 
-    &-edition {
-      padding-top: 15px;
-      font-size: 18px;
-      font-weight: bold;
-      sup {
-        font-size: 14px;
-      }
-    }
+		&-edition {
+			padding-top: 15px;
+			font-size: 18px;
+			font-weight: bold;
+			sup {
+				font-size: 14px;
+			}
+		}
 
-    &-date {
-      font-size: 24px;
-      font-weight: bold;
-      padding-bottom: 20px;
-      sup {
-        font-size: 18px;
-      }
-    }
+		&-date {
+			font-size: 24px;
+			font-weight: bold;
+			padding-bottom: 20px;
+			sup {
+				font-size: 18px;
+			}
+		}
 
-    &-buttons {
-      display: flex;
-      flex-flow: row nowrap;
-      justify-content: center;
+		&-buttons {
+			display: flex;
+			flex-flow: row nowrap;
+			justify-content: center;
 
-      &-button {
-        border-radius: 4px;
-        border: 1px solid transparent;        
-        width: 220px;
-        cursor: pointer;
-        padding: 0 20px 20px 20px;
+			&-button {
+				border-radius: 4px;
+				border: 1px solid transparent;
+				width: 220px;
+				cursor: pointer;
+				padding: 0 20px 20px 20px;
 
-        &-text {
-          height: 60px;
-          font-size: 24px;
-          font-weight: bold;
-          line-height: 60px;
-          border-radius: 4px;
-          background-color: $nice-blue;
-          color: $white;
-        }
+				&-text {
+					height: 60px;
+					font-size: 24px;
+					font-weight: bold;
+					line-height: 60px;
+					border-radius: 4px;
+					background-color: $nice-blue;
+					color: $white;
+				}
 
-        &-sub-text {
-          color: $black;
-          font-style: italic;
-          font-size: 14px;
-          padding: 5px;
-        }
-      }
-    }
-    &-subnote {
-      display: flex;
-      justify-content: center;
-      padding: 20px;
-      .youtube {
-        background: $youtube-logo center no-repeat;
-        background-size: 70px;
-        flex: 0 1 15%;
-      }
-    }
-  }
-  .line {
-    border-top: 1px solid;
-    margin: 0 50px;
-
-  }
+				&-sub-text {
+					color: $black;
+					font-style: italic;
+					font-size: 14px;
+					padding: 5px;
+				}
+			}
+		}
+		&-subnote {
+			display: flex;
+			justify-content: center;
+			padding: 20px;
+			.youtube {
+				background: $youtube-logo center no-repeat;
+				background-size: 70px;
+				flex: 0 1 15%;
+			}
+		}
+	}
+	.line {
+		border-top: 1px solid;
+		margin: 0 50px;
+	}
 }
