--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -20,13 +20,13 @@ html {
   html .read-more {
     color: #ef5ba1; }
   html .read-more::after {
-    content: "Show More";
+    content: 'Show More';
     cursor: pointer;
     text-decoration: underline;
     font-size: 18px;
     font-weight: 700; }
   html .toggle:checked ~ label::after {
-    content: "Show Less"; }
+    content: 'Show Less'; }
   html .toggle {
     display: none;
     visibility: hidden; }
@@ -46,9 +46,9 @@ html {
   .header a {
     text-decoration: none;
     color: #ef5ba1;
-    -webkit-transition: left .5s ease;
-    -moz-transition: left .5s ease;
-    transition: left .5s ease; }
+    -webkit-transition: left 0.5s ease;
+    -moz-transition: left 0.5s ease;
+    transition: left 0.5s ease; }
   .header .nav-bar {
     width: 960px;
     display: flex;
@@ -462,9 +462,6 @@ html {
             display: flex;
             align-items: center;
             justify-content: flex-start; }
-            .archive .previous-editions .content .speakers .speaker-details .speaker-detail .name .speaker-description {
-              font-size: 12px;
-              font-weight: normal; }
     .archive .previous-editions .content .speakers.active {
       display: block; }
 
