--- a/content/static/css/_variables.scss
+++ b/content/static/css/_variables.scss
@@ -8,7 +8,7 @@ $black: #000;
 $gray: #4a4a4a;
 $seafoam-blue: #80c9d2;
 $nice-blue: #1a73ba;
-$section-heading-background: #dfdfdf;
+$section-heading-background: #6a2569;
 $archive-bg-year: #f5f5f5;
 $archive-bg-month: #f1f1f1;
 $archive-bg-content: #ededed;
