--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -174,67 +174,70 @@ html {
 .agenda-heading {
   height: 90px;
   line-height: 90px;
-  text-align: center; }
+  text-align: center;
+  background-color: #6a2569; }
   .agenda-heading-text {
     font-size: 36px;
     font-weight: 800;
     color: #000;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    color: #fff; }
 .agenda .content {
   margin: 0 0 50px 0; }
   .agenda .content .speakers {
     margin: 0px auto;
-    min-width: 768px;
-    width: 768px; }
-    .agenda .content .speakers:first-child {
-      border-top: none; }
-    .agenda .content .speakers:last-child {
-      border-bottom: 1px solid #000; }
+    min-width: 1024px;
+    width: 1024px; }
     .agenda .content .speakers .speaker-details {
       display: flex;
       flex-flow: row wrap;
       align-items: center;
-      border-top: 1px solid #000;
-      padding: 10px 0; }
+      border-bottom: 1px solid #000;
+      padding: 20px 30px; }
       .agenda .content .speakers .speaker-details .time {
-        flex: 1 1 10%;
-        align-self: flex-start;
+        flex: 1 1 20%;
         padding-top: 5px;
         font-weight: 800;
-        text-transform: uppercase; }
-      .agenda .content .speakers .speaker-details .speaker-detail {
-        flex: 1 1 85%; }
-        .agenda .content .speakers .speaker-details .speaker-detail .img {
+        text-transform: uppercase;
+        align-self: center; }
+      .agenda .content .speakers .speaker-details .speaker-detail, .agenda .content .speakers .speaker-details .workshop-detail {
+        flex: 1 1 80%; }
+        .agenda .content .speakers .speaker-details .speaker-detail .img, .agenda .content .speakers .speaker-details .workshop-detail .img {
           border-radius: 32px;
           width: 40px;
           height: 40px;
           margin: 5px 5px 5px 0; }
-        .agenda .content .speakers .speaker-details .speaker-detail .title {
+        .agenda .content .speakers .speaker-details .speaker-detail .title, .agenda .content .speakers .speaker-details .workshop-detail .title {
           color: #ef5ba1;
           font-size: 20px;
           font-weight: bold;
           display: block; }
-        .agenda .content .speakers .speaker-details .speaker-detail .title-default {
+        .agenda .content .speakers .speaker-details .speaker-detail .title-default, .agenda .content .speakers .speaker-details .workshop-detail .title-default {
           color: #000;
           font-size: 20px;
           font-weight: bold; }
-        .agenda .content .speakers .speaker-details .speaker-detail .subtitle {
+        .agenda .content .speakers .speaker-details .speaker-detail .subtitle, .agenda .content .speakers .speaker-details .workshop-detail .subtitle {
           display: block;
           color: #4a4a4a;
           font-size: 15px;
           font-style: italic;
           text-align: justify;
-          padding: 0 0 10px 0; }
-        .agenda .content .speakers .speaker-details .speaker-detail .name {
-          color: #ef5ba1;
+          padding: 0 0 10px 0;
+          line-height: 1.5; }
+        .agenda .content .speakers .speaker-details .speaker-detail .name, .agenda .content .speakers .speaker-details .workshop-detail .name {
           font-size: 15px;
           font-weight: bold;
           display: flex;
           align-items: center;
           justify-content: flex-start; }
-          .agenda .content .speakers .speaker-details .speaker-detail .name .speaker-description {
+          .agenda .content .speakers .speaker-details .speaker-detail .name .speaker-description, .agenda .content .speakers .speaker-details .workshop-detail .name .speaker-description {
             font-size: 12px;
-            font-weight: normal; }
+            font-weight: normal;
+            padding-top: 5px;
+            text-align: justify;
+            line-height: 1.5; }
+          .agenda .content .speakers .speaker-details .speaker-detail .name .profile, .agenda .content .speakers .speaker-details .workshop-detail .name .profile {
+            width: 95%; }
 
 .location {
   position: relative;
@@ -274,7 +277,7 @@ html {
         background-size: 50px;
         background-position: 30px 20px; }
   .location .location-heading {
-    background-color: #dfdfdf;
+    background-color: #6a2569;
     height: 90px;
     line-height: 90px;
     text-align: center; }
@@ -467,7 +470,7 @@ html {
 
 #about {
   margin-top: 40px;
-  background-color: #dfdfdf; }
+  background-color: #6a2569; }
   #about p {
     padding: 20px 0;
     margin: 0; }
@@ -477,7 +480,7 @@ html {
     height: 90px;
     line-height: 90px;
     text-align: center;
-    background-color: #dfdfdf; }
+    background-color: #6a2569; }
     #about .about-heading-text {
       font-size: 36px;
       font-weight: 800;
@@ -489,7 +492,7 @@ html {
     text-align: justify;
     max-width: 1024px;
     margin: auto;
-    background-color: #dfdfdf; }
+    background-color: #6a2569; }
 
 .footer {
   background: #000;
