Updated Location styles

--- a/content/static/css/_location.scss
+++ b/content/static/css/_location.scss
@@ -52,11 +52,11 @@
 		background-color: $section-heading-background;
 		height: 90px;
 		line-height: 90px;
-		text-align: center;
+		text-align: center;		
 		&-text {
 			font-size: 36px;
 			font-weight: 800;
-			color: $black;
+			color: $white;
 			text-transform: uppercase;
 		}
 	}
