--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -284,7 +284,7 @@ html {
     .location .location-heading-text {
       font-size: 36px;
       font-weight: 800;
-      color: #000;
+      color: #fff;
       text-transform: uppercase; }
 
 .archive-heading {
