--- a/content/static/css/_variables.scss
+++ b/content/static/css/_variables.scss
@@ -17,6 +17,7 @@ $archive-active: rgba(255, 255, 255, 0.8);
 //Images
 $tw-logo: url('../img/tw-logo-white.svg');
 $geeknight-logo: url('../img/geek_night_logo.svg');
+$thoughtworks-logo: url('../img/tw-logo-black.svg');
 $direction-img: url('../img/direction.svg');
 $intro-background: url('../img/intro_background.jpg');
 $youtube-logo: url('../img/youtube-logo.svg');
