--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -36,7 +36,7 @@ html {
 .header {
   background: rgba(255, 255, 255, 0.9);
   position: fixed;
-  height: 100px;
+  height: 80px;
   width: 100%;
   z-index: 999;
   padding: 0;
@@ -50,7 +50,7 @@ html {
     -moz-transition: left 0.5s ease;
     transition: left 0.5s ease; }
   .header .nav-bar {
-    width: 960px;
+    width: 1024px;
     display: flex;
     position: relative;
     top: 15px;
@@ -63,8 +63,7 @@ html {
         background: url("../img/geek_night_logo.svg") no-repeat;
         background-size: 140px;
         height: 65px;
-        width: 160px;
-        margin-left: 5px; }
+        width: 160px; }
     .header .nav-bar .menu {
       display: flex;
       align-items: center;
