--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -286,186 +286,191 @@ html {
       color: #fff;
       text-transform: uppercase; }
 
-.archive-heading {
-  height: 90px;
-  line-height: 90px;
-  text-align: center; }
-  .archive-heading-text {
-    font-size: 36px;
-    font-weight: 800;
-    color: #000;
-    text-transform: uppercase; }
-.archive .previous-editions {
-  display: flex;
-  margin: auto;
-  align-content: center;
-  width: 800px;
-  background-color: #ededed; }
-  @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-    .archive .previous-editions {
-      flex-flow: column;
-      background-color: #fff;
-      align-items: center;
-      width: 480px; } }
-  .archive .previous-editions .events {
-    display: flex;
-    flex-flow: row nowrap;
-    text-align: center;
-    flex: 1 1 25%; }
-    @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-      .archive .previous-editions .events {
-        margin: 10px; } }
-    .archive .previous-editions .events .years {
-      flex: 1 1 10%;
+.archive {
+  margin-bottom: 40px; }
+  .archive-heading {
+    height: 90px;
+    line-height: 90px;
+    text-align: center; }
+    .archive-heading-text {
+      font-size: 36px;
       font-weight: 800;
-      font-size: 15px;
-      background-color: #f5f5f5; }
-      .archive .previous-editions .events .years .year {
-        padding: 0px 0 10px 0;
-        height: 20px;
-        padding: 20px;
-        cursor: pointer; }
-      .archive .previous-editions .events .years .year.active {
-        background-color: rgba(255, 255, 255, 0.8); }
-    .archive .previous-editions .events .months {
-      flex: 1 1 10%;
-      font-weight: bold;
-      font-size: 15px;
-      background-color: #f1f1f1; }
-      .archive .previous-editions .events .months .event {
-        padding: 0px 0 10px 0;
-        height: 20px;
-        padding: 20px;
-        display: none;
-        cursor: pointer; }
-      .archive .previous-editions .events .months .event.active {
-        background-color: rgba(255, 255, 255, 0.8); }
-      .archive .previous-editions .events .months .event.show {
-        display: block; }
-  .archive .previous-editions .select-options, .archive .previous-editions .select-styled {
-    display: none; }
-  @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-    .archive .previous-editions .select-hidden {
-      display: none;
-      visibility: hidden;
-      padding-right: 10px; }
-    .archive .previous-editions .select {
-      cursor: pointer;
-      display: inline-block;
-      position: relative;
-      font-size: 16px;
-      width: 145px;
-      height: 50px;
-      margin: 0 5px; }
-    .archive .previous-editions .select-styled {
-      position: absolute;
-      display: block;
-      top: 10px;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      background-color: #ededed;
-      padding: 12px;
-      text-align: left; }
-      .archive .previous-editions .select-styled:after {
-        content: '';
-        width: 0;
-        height: 0;
-        border: 7px solid transparent;
-        border-color: #ef5ba1 transparent transparent transparent;
-        position: absolute;
-        top: 16px;
-        right: 10px;
-        cursor: pointer; }
-    .archive .previous-editions .select-options {
-      display: none;
-      position: absolute;
-      top: 100%;
-      right: 0;
-      left: 0;
-      z-index: 999;
-      margin: 0;
-      padding: 0;
-      background-color: #ededed; }
-      .archive .previous-editions .select-options .event {
-        display: none; }
-      .archive .previous-editions .select-options li {
-        list-style: none;
-        margin: 0;
-        padding: 12px 0;
-        border-left: 1px solid #4a4a4a;
-        border-right: 1px solid #4a4a4a;
-        border-bottom: 1px solid #4a4a4a;
-        cursor: pointer; }
-      .archive .previous-editions .select-options .event.active {
-        background-color: rgba(255, 255, 255, 0.8); }
-      .archive .previous-editions .select-options .event.show {
-        display: block; } }
-  .archive .previous-editions .content {
-    flex: 1 1 75%; }
-    .archive .previous-editions .content .speakers {
-      display: none;
-      padding: 20px;
-      background-color: #ededed; }
-      .archive .previous-editions .content .speakers .edition {
-        padding-top: 15px;
-        font-size: 24px;
+      color: #000;
+      text-transform: uppercase; }
+  .archive .previous-editions {
+    margin: 0px auto;
+    min-width: 1024px;
+    width: 1024px;
+    display: flex;
+    align-content: center;
+    background-color: #ededed; }
+    @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+      .archive .previous-editions {
+        flex-flow: column;
+        background-color: #fff;
+        align-items: center;
+        width: 480px; } }
+    .archive .previous-editions .events {
+      display: flex;
+      flex-flow: row nowrap;
+      text-align: center;
+      flex: 1 1 25%; }
+      @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+        .archive .previous-editions .events {
+          margin: 10px; } }
+      .archive .previous-editions .events .years {
+        flex: 1 1 10%;
+        font-weight: 800;
+        font-size: 15px;
+        background-color: #f5f5f5; }
+        .archive .previous-editions .events .years .year {
+          padding: 0px 0 10px 0;
+          height: 20px;
+          padding: 20px;
+          cursor: pointer; }
+        .archive .previous-editions .events .years .year.active {
+          background-color: rgba(255, 255, 255, 0.5); }
+      .archive .previous-editions .events .months {
+        flex: 1 1 10%;
         font-weight: bold;
-        text-align: center; }
-        .archive .previous-editions .content .speakers .edition sup {
-          font-size: 18px; }
-      .archive .previous-editions .content .speakers .speaker-details {
-        display: flex;
-        border-top: 1px solid #000;
-        padding: 10px 0; }
-        .archive .previous-editions .content .speakers .speaker-details:nth-child(2) {
-          border-top: none; }
-        .archive .previous-editions .content .speakers .speaker-details:last-child {
-          padding-bottom: 25px; }
-        .archive .previous-editions .content .speakers .speaker-details .time {
-          flex: 1 1 10%;
-          align-self: flex-start;
-          padding-top: 5px;
-          font-weight: 800;
-          text-transform: uppercase; }
-        .archive .previous-editions .content .speakers .speaker-details .speaker-detail {
-          flex: 1 1 85%; }
-          .archive .previous-editions .content .speakers .speaker-details .speaker-detail .img {
-            border-radius: 32px;
-            width: 32px;
-            height: 32px;
-            margin: 5px 5px 5px 0; }
-          .archive .previous-editions .content .speakers .speaker-details .speaker-detail .title {
-            color: #ef5ba1;
-            font-size: 20px;
-            font-weight: bold;
-            display: block; }
-          .archive .previous-editions .content .speakers .speaker-details .speaker-detail .title-default {
-            color: #000;
-            font-size: 20px;
-            font-weight: bold; }
-          .archive .previous-editions .content .speakers .speaker-details .speaker-detail .subtitle {
-            display: block;
-            color: #4a4a4a;
-            font-size: 15px;
-            font-style: italic;
-            text-align: justify;
-            padding: 0 0 10px 0;
-            max-height: 150px;
-            overflow: hidden;
-            transition: height 0.5s; }
-          .archive .previous-editions .content .speakers .speaker-details .speaker-detail .show {
-            max-height: 1000px;
-            transition: height 0.5s; }
-          .archive .previous-editions .content .speakers .speaker-details .speaker-detail .name {
-            color: #ef5ba1;
-            font-size: 15px;
-            font-weight: bold;
-            display: flex;
-            align-items: center;
-            justify-content: flex-start; }
-    .archive .previous-editions .content .speakers.active {
-      display: block; }
+        font-size: 15px;
+        background-color: #f1f1f1; }
+        .archive .previous-editions .events .months .event {
+          padding: 0px 0 10px 0;
+          height: 20px;
+          padding: 20px;
+          display: none;
+          cursor: pointer; }
+        .archive .previous-editions .events .months .event.active {
+          background-color: rgba(255, 255, 255, 0.5); }
+        .archive .previous-editions .events .months .event.show {
+          display: block; }
+    .archive .previous-editions .select-options, .archive .previous-editions .select-styled {
+      display: none; }
+    @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+      .archive .previous-editions .select-hidden {
+        display: none;
+        visibility: hidden;
+        padding-right: 10px; }
+      .archive .previous-editions .select {
+        cursor: pointer;
+        display: inline-block;
+        position: relative;
+        font-size: 16px;
+        width: 145px;
+        height: 50px;
+        margin: 0 5px; }
+      .archive .previous-editions .select-styled {
+        position: absolute;
+        display: block;
+        top: 10px;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-color: #ededed;
+        padding: 12px;
+        text-align: left; }
+        .archive .previous-editions .select-styled:after {
+          content: '';
+          width: 0;
+          height: 0;
+          border: 7px solid transparent;
+          border-color: #ef5ba1 transparent transparent transparent;
+          position: absolute;
+          top: 16px;
+          right: 10px;
+          cursor: pointer; }
+      .archive .previous-editions .select-options {
+        display: none;
+        position: absolute;
+        top: 100%;
+        right: 0;
+        left: 0;
+        z-index: 999;
+        margin: 0;
+        padding: 0;
+        background-color: #ededed; }
+        .archive .previous-editions .select-options .event {
+          display: none; }
+        .archive .previous-editions .select-options li {
+          list-style: none;
+          margin: 0;
+          padding: 12px 0;
+          border-left: 1px solid #4a4a4a;
+          border-right: 1px solid #4a4a4a;
+          border-bottom: 1px solid #4a4a4a;
+          cursor: pointer; }
+        .archive .previous-editions .select-options .event.active {
+          background-color: rgba(255, 255, 255, 0.5); }
+        .archive .previous-editions .select-options .event.show {
+          display: block; } }
+    .archive .previous-editions .content {
+      flex: 1 1 120%; }
+      .archive .previous-editions .content .speakers {
+        display: none;
+        padding: 20px;
+        background-color: #ededed; }
+        .archive .previous-editions .content .speakers .edition {
+          padding-top: 15px;
+          font-size: 24px;
+          font-weight: bold;
+          text-align: center; }
+          .archive .previous-editions .content .speakers .edition sup {
+            font-size: 18px; }
+        .archive .previous-editions .content .speakers .speaker-details {
+          display: flex;
+          border-top: 1px solid #000;
+          padding: 10px 0; }
+          .archive .previous-editions .content .speakers .speaker-details:nth-child(2) {
+            border-top: none; }
+          .archive .previous-editions .content .speakers .speaker-details:last-child {
+            padding-bottom: 25px; }
+          .archive .previous-editions .content .speakers .speaker-details .time {
+            flex: 1 1 10%;
+            align-self: flex-start;
+            padding-top: 5px;
+            font-weight: 800;
+            text-transform: uppercase; }
+          .archive .previous-editions .content .speakers .speaker-details .speaker-detail {
+            flex: 1 1 85%; }
+            .archive .previous-editions .content .speakers .speaker-details .speaker-detail img.img {
+              border-radius: 32px;
+              width: 50px;
+              height: 50px;
+              margin: 5px 5px 5px 0; }
+            .archive .previous-editions .content .speakers .speaker-details .speaker-detail .title {
+              color: #ef5ba1;
+              font-size: 20px;
+              font-weight: bold;
+              display: block; }
+            .archive .previous-editions .content .speakers .speaker-details .speaker-detail .title-default {
+              color: #000;
+              font-size: 20px;
+              font-weight: bold; }
+            .archive .previous-editions .content .speakers .speaker-details .speaker-detail .subtitle {
+              display: block;
+              color: #4a4a4a;
+              font-size: 15px;
+              font-style: italic;
+              text-align: justify;
+              padding: 0 0 10px 0;
+              max-height: 150px;
+              overflow: hidden;
+              transition: height 0.5s;
+              padding-right: 5px; }
+            .archive .previous-editions .content .speakers .speaker-details .speaker-detail .show {
+              max-height: 1000px;
+              transition: height 0.5s; }
+            .archive .previous-editions .content .speakers .speaker-details .speaker-detail .name {
+              color: #ef5ba1;
+              font-size: 15px;
+              font-weight: bold;
+              display: flex;
+              align-items: center;
+              justify-content: flex-start;
+              text-align: justify; }
+      .archive .previous-editions .content .speakers.active {
+        display: block; }
 
 #about p {
   padding: 1rem 0;
