--- a/content/static/css/_variables.scss
+++ b/content/static/css/_variables.scss
@@ -6,6 +6,7 @@ $white: #fff;
 $white-90-percent-opacity: rgba(255, 255, 255, 0.9);
 $black: #000;
 $gray: #4a4a4a;
+$light-gray: #efefef;
 $seafoam-blue: #80c9d2;
 $nice-blue: #1a73ba;
 $section-heading-background: #6a2569;
