--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -1,19 +1,17 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   width: 100%;
   height: 100%;
-  min-width: 924px;
-  overflow: auto;
+  min-width: 1024px;
   font-family: 'OpenSans', sans-serif; }
-  @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-    html {
-      min-width: 300px; } }
   html body {
     position: relative;
-    margin: auto;
-    min-width: 924px; }
-    @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-      html body {
-        min-width: 300px; } }
+    margin: 0;
+    padding: 0;
+    min-width: 1024px; }
     html body a {
       color: #ef5ba1;
       text-decoration: none; }
@@ -38,7 +36,7 @@ html {
   position: fixed;
   height: 80px;
   width: 100%;
-  z-index: 999;
+  z-index: 1;
   padding: 0;
   top: 0;
   left: 0;
