--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -1,16 +1,19 @@
-* {
-  box-sizing: border-box;
-}
-
 html {
   width: 100%;
   height: 100%;
+  min-width: 924px;
+  overflow: auto;
   font-family: 'OpenSans', sans-serif; }
+  @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+    html {
+      min-width: 300px; } }
   html body {
     position: relative;
-    margin: 0;
-    padding: 0;
-    min-width: 1024px; }
+    margin: auto;
+    min-width: 924px; }
+    @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+      html body {
+        min-width: 300px; } }
     html body a {
       color: #ef5ba1;
       text-decoration: none; }
@@ -35,7 +38,7 @@ html {
   position: fixed;
   height: 80px;
   width: 100%;
-  z-index: 1;
+  z-index: 999;
   padding: 0;
   top: 0;
   left: 0;
@@ -168,17 +171,18 @@ html {
     margin: 0 50px; }
 
 .agenda-heading {
-  padding-top: 20px;
+  height: 90px;
+  line-height: 90px;
   text-align: center;
-   }
+  background-color: #6a2569; }
   .agenda-heading-text {
     font-size: 36px;
     font-weight: 800;
     color: #000;
     text-transform: uppercase;
-    }
+    color: #fff; }
 .agenda .content {
-  margin: 0 0 20px 0; }
+  margin: 0 0 50px 0; }
   .agenda .content .speakers {
     margin: 0px auto;
     min-width: 1024px;
@@ -219,6 +223,7 @@ html {
           text-align: justify;
           padding: 0 0 10px 0;
           line-height: 1.5;
+          max-height: 55px;
           overflow: hidden; }
           .agenda .content .speakers .speaker-details .speaker-detail .subtitle.show, .agenda .content .speakers .speaker-details .workshop-detail .subtitle.show {
             max-height: none; }
@@ -288,13 +293,14 @@ html {
 .archive {
   margin-bottom: 40px; }
   .archive-heading {
+    height: 90px;
+    line-height: 90px;
     text-align: center; }
     .archive-heading-text {
       font-size: 36px;
       font-weight: 800;
       color: #000;
-      text-transform: uppercase;
-      padding-bottom: 20px;}
+      text-transform: uppercase; }
   .archive .previous-editions {
     margin: 0px auto;
     min-width: 1024px;
@@ -315,7 +321,7 @@ html {
       flex: 1 1 25%; }
       @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
         .archive .previous-editions .events {
-          margin-bottom: 20px; } }
+          margin: 10px; } }
       .archive .previous-editions .events .years {
         flex: 1 1 10%;
         font-weight: 800;
@@ -452,7 +458,7 @@ html {
               font-style: italic;
               text-align: justify;
               padding: 0 0 10px 0;
-              max-height: 54px;
+              max-height: 60px;
               overflow: hidden;
               transition: height 0.5s;
               padding-right: 5px; }
@@ -465,12 +471,12 @@ html {
               display: flex;
               align-items: center;
               justify-content: flex-start;
-              text-align: justify;
-              padding-top: 10px;}
+              text-align: justify; }
               .archive .previous-editions .content .speakers .speaker-details .speaker-detail .name .speaker-description {
                 font-size: 12px;
                 font-weight: normal;
                 padding-top: 5px;
+                text-align: justify;
                 line-height: 1.5; }
       .archive .previous-editions .content .speakers.active {
         display: block; }
