--- a/layouts/_layout.html.erb
+++ b/layouts/_layout.html.erb
@@ -1,43 +1,13 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Geek Night Chennai - <%= title %></title>
-    <meta name="description" content="" />
-
-    <script type="text/javascript" src="js/vendor/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-    <link rel="shortcut icon" href="/geeknight/favicon.ico" type="image/x-icon" />
+    <script type="text/javascript" src=<%= baseURL + "js/vendor/jquery-3.3.1.min.js" %>></script>
+    <script type="text/javascript" src=<%= baseURL + "js/app.js" %>></script>
     
     <link href='//fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/app.css" />
-
-    <script type="application/ld+json">
-      <%= json_of_event(item) %>
-    </script>
+    <link rel="stylesheet" href=<%= baseURL + "css/app.css" %> />
   </head>
   <body>
-    <!--[if lte IE 8]>
-        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" rel="nofollow">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-
     <%= yield %>
-
-    <!-- Google Analytics -->
-      <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-63362668-3', 'auto');
-        ga('send', 'pageview');
-
-      </script>
-    <!-- End Google Analytics -->
   </body>
 </html>
