[Hari] Change header bar logo to tw-rebrand logo

--- a/content/static/css/_header.scss
+++ b/content/static/css/_header.scss
@@ -26,10 +26,10 @@
 			display: flex;
 			flex: 1 1 50%;
 			.logo {
-				background: $geeknight-logo no-repeat;
-				background-size: 140px;
+				background: $tw-rebrand-logo no-repeat center;
+				background-size: 580px;
 				height: 65px;
-				width: 160px;
+				width: 200px;
 			}
 		}
 		.menu {
