--- a/content/static/css/_variables.scss
+++ b/content/static/css/_variables.scss
@@ -17,6 +17,7 @@ $archive-active: rgba(255, 255, 255, 0.5);
 
 //Images
 $tw-logo: url('../img/tw-logo-white.svg');
+$tw-rebrand-logo: url('../img/tw-rebrand-logo.svg');
 $geeknight-logo: url('../img/geek_night_logo.svg');
 $thoughtworks-logo: url('../img/tw-logo-black.svg');
 $direction-img: url('../img/direction.svg');
