[Hari] Change intro banner

--- a/content/static/css/_variables.scss
+++ b/content/static/css/_variables.scss
@@ -22,6 +22,7 @@ $geeknight-logo: url('../img/geek_night_logo.svg');
 $thoughtworks-logo: url('../img/tw-logo-black.svg');
 $direction-img: url('../img/direction.svg');
 $intro-background: url('../img/intro_background.jpg');
+$intro-banner: url('../img/intro-banner.png');
 $youtube-logo: url('../img/youtube-logo.svg');
 
 //BreakPoints
