--- a/content/static/css/_intro.scss
+++ b/content/static/css/_intro.scss
@@ -7,7 +7,7 @@
 	padding-top: 100px;
 	.banner {
 		flex: 1 1 60%;
-		background: $intro-background center center no-repeat;
+		background: $intro-banner center center no-repeat;
 		background-size: 100%;
 
 		&-overlay {
