[Hari] Change intro info titler, make word case changes in about section

--- a/layouts/_about_section.html.erb
+++ b/layouts/_about_section.html.erb
@@ -4,8 +4,8 @@
     </div>
     <div class="about-details">
         <p>An open forum for geeks to connect, discuss & learn latest ideas, technologies and trends in software development.</p>
-        <p>Geek Night is a monthly event to promote sharing of technical knowledge and increase collaboration between
-            geeks in Chennai. It is organized by a passionate group of programmers and sponsored by ThoughtWorks.</p>
+        <p>Geeknight is a monthly event to promote sharing of technical knowledge and increase collaboration between
+            geeks in Chennai. It is organized by a passionate group of programmers and sponsored by Thoughtworks.</p>
 
         <p>It happens on the <b>Last Thursday of every month</b>, unless that's a public holiday or any other
             unavoidable cause, like an Alien invasion.</p>
